<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="var1">ini pesan</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="btnSignIn">Sign IN</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Data Anda</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil password</string>
    <string name="label2">Login berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
</resources>